--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "cypress:open": "start-server-and-test start http://localhost:4200 cypress:run",
-    "cypress:run": "cypress open"
+    "cypress:run": "cypress open",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
@@ -32,8 +34,11 @@
     "@angular-devkit/build-angular": "^17.3.11",
     "@angular/cli": "^17.3.11",
     "@angular/compiler-cli": "^17.3.0",
+    "@cypress/schematic": "^2.5.2",
     "@types/jasmine": "~5.1.0",
+    "angular-eslint": "19.0.2",
     "cypress": "^13.16.1",
+    "eslint": "^9.16.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
@@ -41,6 +46,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "start-server-and-test": "^2.0.9",
-    "typescript": "~5.4.2"
+    "typescript": "~5.4.2",
+    "typescript-eslint": "8.18.0"
   }
 }
